Adjust collection styles and custom button for responsiveness

--- a/src/components/collection-item/collection-item.styles.scss
+++ b/src/components/collection-item/collection-item.styles.scss
@@ -41,12 +41,13 @@
     font-size: 18px;
 
     .name {
-      width: 90%;
+      width: 72%;
       margin-bottom: 15px;
     }
 
     .price {
-      width: 10%;
+      width: 28%;
+      text-align: right;
     }
   }
 }
