--- a/src/pages/collection/collection.styles.scss
+++ b/src/pages/collection/collection.styles.scss
@@ -9,10 +9,10 @@
   }
 
   .items {
-    display: flex;
-    flex-direction: row;
-    // grid-template-columns: 1fr 1fr 1fr 1fr;
-    // grid-gap: 10px;
+    // display: flex;
+    // flex-direction: row;
+    grid-template-columns: 1fr 1fr 1fr 1fr;
+    grid-gap: 10px;
     & .collection-item {
       margin-bottom: 30px;
     }
