Restore pre styled components

--- a/src/pages/collection/collection.styles.scss
+++ b/src/pages/collection/collection.styles.scss
@@ -1,6 +1,5 @@
 .collection-page {
   display: flex;
-  flex: wrap;
   flex-direction: column;
 
   .title {
@@ -9,10 +8,10 @@
   }
 
   .items {
-    // display: flex;
-    // flex-direction: row;
+    display: grid;
     grid-template-columns: 1fr 1fr 1fr 1fr;
     grid-gap: 10px;
+
     & .collection-item {
       margin-bottom: 30px;
     }
