--- a/src/components/checkout-item/checkout-item.styles.scss
+++ b/src/components/checkout-item/checkout-item.styles.scss
@@ -3,12 +3,12 @@
   display: flex;
   min-height: 100px;
   border-bottom: 1px solid darkgrey;
-  padding: 15px 0;
-  font-size: 20px;
+  padding: 15px 0px;
+  font-size: 17px;
   align-items: center;
 
   .image-container {
-    width: 23%;
+    width: 22%;
     padding-right: 15px;
 
     img {
@@ -19,7 +19,7 @@
   .name,
   .quantity,
   .price {
-    width: 23%;
+    width: 22%;
   }
 
   .quantity {
@@ -35,7 +35,7 @@
   }
 
   .remove-button {
-    padding-left: 12px;
     cursor: pointer;
+    text-align: center;
   }
 }
