--- a/src/pages/checkout/checkout.styles.scss
+++ b/src/pages/checkout/checkout.styles.scss
@@ -1,5 +1,5 @@
 .checkout-page {
-  width: 55%;
+  width: 100%;
   min-height: 90vh;
   display: flex;
   flex-direction: column;
@@ -8,17 +8,17 @@
 
   .checkout-header {
     width: 100%;
-    padding: 10px 0;
+    padding: 1px 0px;
     display: flex;
     justify-content: space-between;
     border-bottom: 1px solid darkgrey;
 
     .header-block {
       text-transform: capitalize;
-      width: 23%;
+      width: 22%;
 
       &:last-child {
-        width: 8%;
+        width: 12%;
       }
     }
   }
@@ -26,7 +26,7 @@
   .total {
     margin-top: 30px;
     margin-left: auto;
-    font-size: 36px;
+    font-size: 30px;
   }
 
   button {
