--- a/src/components/header/header.styles.scss
+++ b/src/components/header/header.styles.scss
@@ -8,11 +8,15 @@
   .logo-container {
     height: 100%;
     width: 70px;
-    padding: 25px;
+    padding: 10px;
+  }
+  .logo {
+    width: 200%;
+    align-content: center;
   }
 
   .options {
-    width: 75%;
+    width: 50%;
     height: 100%;
     display: flex;
     align-items: center;
@@ -22,5 +26,20 @@
       padding: 10px 15px;
       cursor: pointer;
     }
+  }
+}
+
+@media screen and (max-width: 800px) {
+  .header {
+    height: 60px;
+    padding: 10px;
+    margin-bottom: 20px;
+  }
+  .logo-container {
+    width: 50px;
+    padding: 0;
+  }
+  .options {
+    width: 80%;
   }
 }
