--- a/src/pages/collection/collection.styles.scss
+++ b/src/pages/collection/collection.styles.scss
@@ -6,14 +6,23 @@
     font-size: 28px;
     margin-bottom: 25px;
   }
+}
+.items {
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr 1fr;
+  grid-gap: 10px;
 
+  & .collection-item {
+    margin-bottom: 30px;
+  }
+}
+@media screen and (max-width: 800px) {
+  .collection-page {
+    align-items: center;
+  }
   .items {
     display: grid;
-    grid-template-columns: 1fr 1fr 1fr 1fr;
-    grid-gap: 10px;
-
-    & .collection-item {
-      margin-bottom: 30px;
-    }
+    grid-template-columns: 1fr 1fr;
+    grid-gap: 15px;
   }
 }
